<?xml version="1.0"?>
<package>
  <name>forward_kinematics</name>
  <version>0.0.0</version>

  <description>Description</description>
  <maintainer email="mfallon@robots.ox.ac.uk">Maurice Fallon</maintainer>
  <author email="mfallon@robots.ox.ac.uk">Maurice Fallon</author>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>orocos_kdl</build_depend>
  <run_depend>orocos_kdl</run_depend>

  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>

  <build_depend>urdf_dom</build_depend>
  <run_depend>urdf_dom</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export />
</package>

